--- a/Fundraising/wwwroot/ProductPage/comments.html
+++ b/Fundraising/wwwroot/ProductPage/comments.html
@@ -195,7 +195,7 @@
     </div>
 
     <!--引入signalr-->
-    <script src="../lib/signalr/dist/browser/signalr.js"></script>
+    <script src="../lib/microsoft/signalr/dist/browser/signalr.js"></script>
     <!--引入signalr-->
 
     <script>
@@ -241,7 +241,7 @@
                     }
                 })
                 this.connection = new signalR.HubConnectionBuilder()
-                    .withUrl("/chatHub")
+                    .withUrl("/commentHub")
                     .build();
 
                 this.connection
