--- a/Fundraising/wwwroot/ProductPage/mymainpage.html
+++ b/Fundraising/wwwroot/ProductPage/mymainpage.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>咱的募資平台</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.pkgd.js"></script>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/features/">
@@ -40,34 +41,42 @@
 
         .gallery-cell {
             width: 55%;
-            height: 50vh;
+            height: 450px;
             margin-right: 10px;
             background: #8C8;
             counter-increment: gallery-cell;
         }
 
             .gallery-cell img {
-                max-width: 100%;
-                height: 380px;
+                width: 100%;
+                height: 450px;
             }
 
-        .productcard img {
-            margin-left: 5%;
-            border-radius: 10px;
+        .selectedimgdiv {
+            width: 408px;
+            height: 214px;
         }
 
         .selectedimg {
-            max-width: 100%;
-            max-height: 100%;
+            width: 100%;
+            height: 100%;
         }
+
+        .more {
+            font-size: 20px;
+            float: right;
+            text-decoration: none;
+            color: #047c51;
+        }
+
+            .more:hover {
+                border-bottom: 2px solid #047c51;
+                color: #047c51;
+            }
 
         h3 {
             margin-top: 15px;
         }
-
-            h3:hover {
-                color: rgb(110, 110, 110);
-            }
 
         .feature span {
             font-size: 14px;
@@ -126,145 +135,172 @@
         }
 
         .mainQA {
-            background-color: gainsboro;
             padding: 100px 300px;
             position: relative;
             margin-top: 100px;
+            background-image: url("../img/");
+            background-size: cover;
+            color: white;
+            text-shadow: 0.1em 0.1em 0.1em black;
         }
 
         .mainQAText {
             text-align: center;
             position: relative;
         }
+
+        .QAbtn {
+            background-color: #047c51;
+            border: solid 2px #047c51;
+            border-radius: 0px;
+            color: white;
+            padding: 10px 5px;
+            width: 150px;
+        }
     </style>
 
 </head>
 
-<body id="app">
+<body >
+    <div id="app">
 
-    <div class="headerpage"></div>
+        <div class="headerpage"></div>
 
-    <!-- 輪播圖 -->
-    <div class="gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
-        <!--<div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="./pic/top1.png" alt=""></a></div>
-        <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="./pic/top2.png" alt=""></a></div>
-        <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="./pic/top3.png" alt=""></a></div>
-        <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="./pic/top4.png" alt=""></a></div>
-        <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="./pic/top5.png" alt=""></a></div>-->
-    </div>
-
-    <div class="container px-4 py-5" id="mySelected">
-        <h2 class="pb-2 border-bottom">
-            平台精選
-            <a href="#" style="font-size: 20px; float: right; text-decoration: none; color: black;">More ></a>
-        </h2>
-
-        <div class="row g-4 py-8 row-cols-1 row-cols-lg-3">
-            <a href="./product.html" style="text-decoration: none; color: black;" v-on:click="getproductID(item)" v-for="item in featuredList">
-                <div class="feature col">
-                    <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#collection" />
-                        </svg>
-                    </div>
-
-                    <!-- 資訊卡 -->
-                    <img class="selectedimg" src="./page.png" alt="">
-                    <p></p>
-                    <h3 class="fs-5" style="height: 70px">{{item.productTitle}}</h3>
-                    <div class="d-flex justify-content-between">
-                        <p style="font-weight:bold">$ {{item.currentAmount | money}}</p>
-                        <span>{{item.nowperson}} 人支持</span>
-                    </div>
-
-                    <!-- 進度條 -->
-                    <div class="progress" style="height: 10px;">
-                        <div class="progress-bar bg-success" role="progressbar" :style="{width: item.percent+'%'}" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <div class="pb-2"></div>
-                    <div class="d-flex justify-content-between">
-                        <span>剩下{{item.days}} 天</span>
-                        <span class="money" style="color:green">{{item.percent}} %</span>
-                    </div>
-                </div>
-            </a>
+        <!-- 輪播圖 -->
+        <div class="gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
+            <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider1.png" alt=""></a></div>
+            <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider2.png" alt=""></a></div>
+            <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider3.png" alt=""></a></div>
+            <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider4.png" alt=""></a></div>
+            <div class="gallery-cell"><a href="https://www.flyingv.cc/"><img src="../img/slider5.png" alt=""></a></div>
         </div>
-    </div>
+
+        <div class="container px-4 py-5" id="mySelected">
+            <h2 class="pb-2 border-bottom">
+                平台精選123
+                <a href="#" class="more">
+                    More
+                    >
+                </a>
+            </h2>
+
+            <div class="row g-4 py-8 row-cols-1 row-cols-lg-3">
+                <a href="./product.html" style="text-decoration: none; color: black;" v-on:click="getproductID(item)"
+                   v-for="item in featuredList">
+                    <div class="feature col">
+                        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+                            <svg class="bi" width="1em" height="1em">
+                                <use xlink:href="#collection" />
+                            </svg>
+                        </div>
+
+                        <!-- 資訊卡 -->
+                        <div class="selectedimgdiv" style="width:100%">
+                            <!--<img class="selectedimg" src="./page.png" alt="">-->
+                            <img class="selectedimg" :src="item.coverphoto" alt="">
+                        </div>
+                        <p></p>
+                        <h3 class="fs-5" style="height: 70px">{{item.productTitle}}</h3>
+                        <div class="d-flex justify-content-between">
+                            <p style="font-weight:bold">$ {{item.currentAmount | money}}</p>
+                            <span>{{item.nowperson}} 人支持</span>
+                        </div>
+
+                        <!-- 進度條 -->
+                        <div class="progress" style="height: 10px;">
+                            <div class="progress-bar bg-success" role="progressbar" :style="{width: item.percent+'%'}"
+                                 aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="pb-2"></div>
+                        <div class="d-flex justify-content-between">
+                            <span>剩下{{item.days}} 天</span>
+                            <span class="money" style="color:green">{{item.percent}} %</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
 
 
-    <div class="mainQA">
-        <div class="mainQAText">
-            <h3>給予贊助者的信任承諾</h3>
-            <p style="padding-bottom: 30px; color: black;">用群眾的力量，讓有價值的事物獲得更好的機會！</p>
-            <div class="row row-cols-1 row-cols-lg-4 align-items-stretch g-4 py- justify-content-center">
-                <button class="btn btn-success">發起提案</button>
+        <div class="mainQA">
+            <div class="mainQAText">
+                <h3>給予贊助者的信任承諾</h3>
+                <p style="padding-bottom: 30px; color: white;
+            text-shadow: 0.1em 0.1em 0.1em black;">用群眾的力量，讓有價值的事物獲得更好的機會！</p>
+                <div class="row row-cols-1 row-cols-lg-4 align-items-stretch g-4 py- justify-content-center">
+                    <button class="QAbtn btn btn-success">發起提案</button>
+                </div>
+            </div>
+        </div>
+
+        <!--<div class="container px-4 py-5" id="mySelected">
+            <h2 class="pb-2 border-bottom">
+                近期新增
+                <a href="#" style="font-size: 20px; float: right; text-decoration: none; color:black;">More ></a>
+            </h2>
+            <div class="row g-4 py-8 row-cols-1 row-cols-lg-3">
+
+                <a href="#" style="text-decoration: none; color: black;">
+                    <div class="feature col">
+                        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+                            <svg class="bi" width="1em" height="1em">
+                                <use xlink:href="#collection" />
+                            </svg>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>-->
+
+        <div class="container px-4 py-5" id="mySelected">
+            <h2 class="pb-2 border-bottom">
+                近期新增
+                <a href="#" class="more">More ></a>
+            </h2>
+            <div class="row g-4 py-8 row-cols-1 row-cols-lg-3">
+                <a href="./product.html" style="text-decoration: none; color: black;" v-on:click="getproductID(item)"
+                   v-for="item in recentList">
+                    <div class="feature col">
+                        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
+                            <svg class="bi" width="1em" height="1em">
+                                <use xlink:href="#collection" />
+                            </svg>
+                        </div>
+
+                        <!-- 資訊卡 -->
+                        <div class="selectedimgdiv">
+                            <img class="selectedimg" src="./page.png" alt="">
+                        </div>
+                        <p></p>
+                        <h3 class="fs-5" style="height: 70px">{{item.productTitle}}</h3>
+                        <div class="d-flex justify-content-between">
+                            <p style="font-weight:bold">$ {{item.currentAmount | money}}</p>
+                            <span>{{item.nowperson}} 人支持</span>
+                        </div>
+
+                        <!-- 進度條 -->
+                        <div class="progress" style="height: 10px;">
+                            <div class="progress-bar bg-success" role="progressbar" :style="{width: item.percent+'%'}"
+                                 aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="pb-2"></div>
+                        <div class="d-flex justify-content-between">
+                            <span>剩下{{item.days}} 天</span>
+                            <span class="money" style="color:green">{{item.percent}} %</span>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
-
-    <!--<div class="container px-4 py-5" id="mySelected">
-        <h2 class="pb-2 border-bottom">
-            近期新增
-            <a href="#" style="font-size: 20px; float: right; text-decoration: none; color:black;">More ></a>
-        </h2>
-        <div class="row g-4 py-8 row-cols-1 row-cols-lg-3">
-
-            <a href="#" style="text-decoration: none; color: black;">
-                <div class="feature col">
-                    <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#collection" />
-                        </svg>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>-->
-
-    <div class="container px-4 py-5" id="mySelected">
-        <h2 class="pb-2 border-bottom">
-            近期新增
-            <a href="#" style="font-size: 20px; float: right; text-decoration: none; color: black;">More ></a>
-        </h2>
-        <div class="row g-4 py-8 row-cols-1 row-cols-lg-3">
-            <a href="./product.html" style="text-decoration: none; color: black;" v-on:click="getproductID(item)" v-for="item in recentList">
-                <div class="feature col">
-                    <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#collection" />
-                        </svg>
-                    </div>
-
-                    <!-- 資訊卡 -->
-                    <img class="selectedimg" src="./page.png" alt="">
-                    <p></p>
-                    <h3 class="fs-5" style="height: 70px">{{item.productTitle}}</h3>
-                    <div class="d-flex justify-content-between">
-                        <p style="font-weight:bold">$ {{item.currentAmount | money}}</p>
-                        <span>{{item.nowperson}} 人支持</span>
-                    </div>
-
-                    <!-- 進度條 -->
-                    <div class="progress" style="height: 10px;">
-                        <div class="progress-bar bg-success" role="progressbar" :style="{width: item.percent+'%'}" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <div class="pb-2"></div>
-                    <div class="d-flex justify-content-between">
-                        <span>剩下{{item.days}} 天</span>
-                        <span class="money" style="color:green">{{item.percent}} %</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>
+    <script src="../layout/layout.js"></script>
 
     <script>
-
         const app = {
             data() {
                 return {
                     featuredList: [],
-                    recentList:[],
+                    recentList: [],
                     message: 'word'
                 }
             },
@@ -290,6 +326,7 @@
         };
         Vue.createApp(app).mount("#app");
     </script>
+
 </body>
 
 </html>
