--- a/Fundraising/wwwroot/Login/login.html
+++ b/Fundraising/wwwroot/Login/login.html
@@ -348,7 +348,7 @@
                         if (res.data == "帳號密碼錯誤") {
                             swal('登入失敗', '確認輸入的帳號密碼', 'error');
                         } else {
-                            window.location = "https://localhost:44398/MainPage/MainPage.html";
+                            window.location = "https://localhost:44398/productpage/mymainpage.html";
                         }
 
                     })
