--- a/Fundraising/wwwroot/ProductPage/mymainpage.html
+++ b/Fundraising/wwwroot/ProductPage/mymainpage.html
@@ -53,7 +53,7 @@
             }
 
         .selectedimgdiv {
-            width: 408px;
+            width: 100%;
             height: 214px;
         }
 
@@ -177,7 +177,7 @@
 
         <div class="container px-4 py-5" id="mySelected">
             <h2 class="pb-2 border-bottom">
-                平台精選123
+                平台精選
                 <a href="#" class="more">
                     More
                     >
@@ -195,7 +195,7 @@
                         </div>
 
                         <!-- 資訊卡 -->
-                        <div class="selectedimgdiv" style="width:100%">
+                        <div class="selectedimgdiv">
                             <!--<img class="selectedimg" src="./page.png" alt="">-->
                             <img class="selectedimg" :src="item.coverphoto" alt="">
                         </div>
